small change to login
linked login to register page

--- a/chat-app/templates/login.html
+++ b/chat-app/templates/login.html
@@ -39,7 +39,7 @@
                     <br><button type="submit">Login</button><br>   
             </form>   
         </div>
-        <br><a href="">New? Sign up here!</a> <!-- link to register page -->
+        <br><a href="{{ url_for('register') }}">New? Sign up here!</a> <!-- link to register page -->
     </div>
 </body>
 </html>
