--- a/chat-app/templates/register.html
+++ b/chat-app/templates/register.html
@@ -30,7 +30,7 @@
       <h4 class="text-center">Enter your details below to register</h1>
       <br>
       <div class ="row">
-      <form action="/home">
+      <form action="/">
         <p>
         <br>
         <input type="text" placeholder="First Name" name="firstname"><br><br>
