Added some css styling to login and index.html

--- a/chat-app/templates/testsite.html
+++ b/chat-app/templates/testsite.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta content="IE=edge" http-equiv="X-UA-Compatible">
-    <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>My Chat App</title>
+<head> 
+    <title>Login Form</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
-    <style>
-        *,
+
+    <!--Stylesheet-->
+    <style>*,
         *:before,
         *:after{
         padding: 0;
@@ -18,7 +14,7 @@
         box-sizing: border-box;
         }
         body{
-            background-color: #080710;
+        background-color: #080710;
         }
         .background{
         width: 430px;
@@ -28,31 +24,54 @@
         left: 50%;
         top: 50%;
         }
+        .background .shape{
+        height: 200px;
+        width: 200px;
+        position: absolute;
+        border-radius: 50%;
+        }
+        .shape:first-child{
+        background: linear-gradient(
+          #7487b4,
+          #1f2224
+        );
+        left: -80px;
+        top: -90px;
+        }
+        .shape:last-child{
+        background: linear-gradient(
+          to right,
+          #8d8583,
+          #413f3d
+        );
+        right: -80px;
+        bottom: -85px;
+        }
         form{
         height: 520px;
         width: 400px;
-        background-color: rgba(24, 28, 207, 0.13);
+        box-shadow: 0 0 40px rgba(8,7,16,0.6);
+        background-color: rgba(97, 99, 206, 0.13);
+        backdrop-filter:blur(20px);
+        border: 1px solid rgba(255,255,255,0.1);
         position: absolute;
         transform: translate(-50%,-50%);
         top: 50%;
         left: 50%;
         border-radius: 10px;
-        border: 2px solid rgba(255,255,255,0.1);
-        box-shadow: 0 0 40px rgba(8,7,16,0.6);
         padding: 50px 35px;
         }
         form *{
         font-family: 'Poppins',sans-serif;
         color: #ffffff;
-        letter-spacing: 0.5px;
         outline: none;
-        border: none;
+        letter-spacing: 0.5px;
         }
         form h3{
-        font-size: 32px;
-        font-weight: 500;
+        font-size: 37px;
         line-height: 42px;
         text-align: center;
+        font-weight: 500;
         }
         
         label{
@@ -87,19 +106,25 @@
         cursor: pointer;
         }
     </style>
+
 </head>
 <body>
-    <div class = "background">
-        <form action="/chat">
-            <h3>My Chat App</h3>
-            <label>Enter your username:</label>
-            <input type="text" placeholder="'Saleh'" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Saleh'" name="username">
-        
-            <label>Enter room id:</label>
-            <input type="text" placeholder="1234" onfocus="this.placeholder = ''"onblur="this.placeholder = 1234" name="room">
-            
-            <button type="submit">Submit</button>
-        </form>
+    <div class="background">
+        <div class="shape"></div>
+        <div class="shape"></div>
     </div>
+    <form action="/home">
+        <h3>Log In</h3>
+
+        <label for="username">Email</label>
+        <input type="text" placeholder="Email: @bath.ac.uk" onfocus="this.placeholder = ''" onblur="this.placeholder ='Email: @bath.ac.uk'" id="username" required>
+
+        <label for="password">Password</label>
+        <input type="password" placeholder="********" id="password" onfocus="this.placeholder = ''" onblur="this.placeholder ='********'" required>
+
+        <button>Log In</button>
+
+        <br><a href="{{ url_for('register') }}">New? Sign up here!</a>
+    </form>
 </body>
 </html>
