removed border outline from input fields

--- a/chat-app/templates/testsite.html
+++ b/chat-app/templates/testsite.html
@@ -65,6 +65,7 @@
         font-family: 'Poppins',sans-serif;
         color: #ffffff;
         outline: none;
+        border: none;
         letter-spacing: 0.5px;
         }
         form h3{
