--- a/chat-app/templates/login.html
+++ b/chat-app/templates/login.html
@@ -1,45 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
-    <title>Login</title>
-    <style>
-        .container {
-            text-align: center;
+<head> 
+    <title>Login Form</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
+
+    <!--Stylesheet-->
+    <style>*,
+        *:before,
+        *:after{
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
         }
-        .row{
-            margin: auto;
-            width: 50%;
-            border: 3mm ridge rgb(160, 192, 205);
-            padding: 10px;
-            text-align: center;
-            align-items: center;
-            background-color: rgb(183, 222, 238);
+        body{
+        background-color: #4884b6;
         }
-        body {
-            background-color: rgb(94, 196, 239);
+        .background{
+        width: 430px;
+        height: 530px;
+        position: absolute;
+        transform: translate(-50%,-50%);
+        left: 50%;
+        top: 50%;
+         }
+        .logo{
+        font-family: 'Geneva';
+        margin-top: 60px;
+        font-size: 35px;
+        line-height: 42px;
+        text-align: center;
+        color:  #0a2031;
+        letter-spacing: 4px;
+        }
+        form{
+        height: 500px;
+        width: 400px;
+        box-shadow: 0 0 40px rgba(8,7,16,0.6);
+        background-color: rgba(97, 99, 206, 0.13);
+        backdrop-filter:blur(30px);
+        border: 1px solid rgba(255,255,255,0.1);
+        position: absolute;
+        transform: translate(-50%,-50%);
+        top: 53%;
+        left: 50%;
+        border-radius: 10px;
+        padding: 50px 35px;
+        background:  #174368;
+        }
+        form *{
+        font-family: 'Poppins',sans-serif;
+        color: #ffffff;
+        outline: none;
+        border: none;
+        letter-spacing: 0.5px;
+        }
+        form h3{
+        font-size: 37px;
+        line-height: 42px;
+        text-align: center;
+        font-weight: 500;
+        }
+        
+        label{
+        display: block;
+        margin-top: 30px;
+        font-size: 16px;
+        font-weight: 500;
+        }
+        input{
+        display: block;
+        height: 50px;
+        width: 100%;
+        background-color: rgba(255,255,255,0.07);
+        border-radius: 3px;
+        padding: 0 10px;
+        margin-top: 8px;
+        font-size: 14px;
+        font-weight: 300;
+        }
+        ::placeholder{
+        color: #e5e5e5;
+        }
+        button{
+        margin-top: 50px;
+        width: 100%;
+        background-color: #ffffff;
+        color: #080710;
+        padding: 15px 0;
+        font-size: 18px;
+        font-weight: 600;
+        border-radius: 5px;
+        cursor: pointer;
         }
     </style>
-</head>
 
-<body class="body">
-    <div class="container">
-        <h1>JustAsk</h1>
-        <h2>Login</h2><br>
-        <div class="row">          
-            <form action="/home">
-                <div>
-                    <br><input type="text" placeholder="Email" name="email"><br><br>
-                    <input type="password" placeholder="Password" name="password"><br>
-                </div> 
-                    <br><button type="submit">Login</button><br>   
-            </form>   
-        </div>
-        <br><a href="{{ url_for('register') }}">New? Sign up here!</a> <!-- link to register page -->
+</head>
+<body>
+    <div class="logo"> 
+        <h1>justask.</h1>
     </div>
+    <form action="/login" method = "post">
+        <h3>Log In</h3>
+
+        <label for="username">Email</label>
+        <input name = "email" type="text" placeholder="Email" onfocus="this.placeholder = ''" onblur="this.placeholder ='Email'" id="username" required>
+
+        <label for="password">Password</label>
+        <input name = "password" type="password" placeholder="********" id="password" onfocus="this.placeholder = ''" onblur="this.placeholder ='********'" required>
+
+        <button>Log In</button>
+
+        <br><br><a href="{{ url_for('register') }}">New? Sign up here!</a>
+    </form>
 </body>
 </html>
