index linked to chat hyperlink

--- a/chat-app/templates/profile.html
+++ b/chat-app/templates/profile.html
@@ -164,7 +164,7 @@
     <div class="sidebar">
         <ul>
             <li><a href=""><i class="fa-regular fa-user"></i>Profile</a></li>
-            <li><a href=""><i class="fa-solid fa-comments"></i>Chat</a></li>
+            <li><a href="{{ url_for('home') }}"><i class="fa-solid fa-comments"></i>Chat</a></li>
             <li><a href=""><i class="fa-solid fa-question"></i>MCQ</a></li>
             <li><a href=""><i class="fa-regular fa-comment-dots"></i>Feedback</a></li>
         </ul>
