Co-authored-by: DylanS2306 <DylanS2306@users.noreply.github.com>

--- a/chat-app/templates/chat_login.html
+++ b/chat-app/templates/chat_login.html
@@ -90,11 +90,8 @@
 </head>
 <body>
     <div class = "background">
-        <form action="/chat">
+        <form action="/chat_login" method = "post">
             <h3>My Chat App</h3>
-            <label>Enter your username:</label>
-            <input type="text" placeholder="'Saleh'" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Saleh'" name="username">
-        
             <label>Enter room id:</label>
             <input type="text" placeholder="1234" onfocus="this.placeholder = ''"onblur="this.placeholder = 1234" name="room">
             
