--- a/chat-app/templates/chat.html
+++ b/chat-app/templates/chat.html
@@ -9,6 +9,9 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
+    <a href="/chat_logout">
+        <button>Logout</button>
+    </a>  
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-6 col-md-offset-3 well">
@@ -26,7 +29,7 @@
 </body>
 <script src="https://cdn.socket.io/3.1.3/socket.io.min.js"></script>
 <script>
-    const socket = io.connect("http://127.0.0.1:5000");
+    const socket = io.connect("https://panic-banned-international-offensive.trycloudflare.com");
 
     socket.on('connect', function () {
         socket.emit('join_room', {
@@ -61,7 +64,7 @@
     socket.on('receive_message', function (data) {
         console.log(data);
         const newNode = document.createElement('div');
-        newNode.innerHTML = `<b>${data.username}:&nbsp;</b> ${data.message}`;
+        newNode.innerHTML = `<b>${data.time} ${data.username}:&nbsp;</b> ${data.message} `;
         document.getElementById('messages').appendChild(newNode);
     });
 
@@ -69,7 +72,7 @@
         console.log(data);
         if (data.username !== "{{ username }}") {
             const newNode = document.createElement('div');
-            newNode.innerHTML = `<b>${data.username}</b> has joined the room`;
+            newNode.innerHTML = `<b>${data.time} ${data.username} has joined the room</b>`;
             document.getElementById('messages').appendChild(newNode);
         }
     });
