--- a/chat-app/templates/chat.html
+++ b/chat-app/templates/chat.html
@@ -7,8 +7,112 @@
     <title>My Chat App</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/0260874841.js" crossorigin="anonymous"></script> <!--Used for icons -->
+    <style>
+        *{
+            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+
+        *,
+        *:before,
+        *:after{
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+        }
+        body{
+            background-color: #4884b6;
+        }
+        .background{
+        width: 430px;
+        height: 530px;
+        position: absolute;
+        transform: translate(-50%,-50%);
+        left: 50%;
+        top: 50%;
+        }
+        .sidebar{
+            position:absolute;
+            float: left;
+            left: 0;
+            width: 200px;
+            height: calc(100% - 65px);
+            background-color: #174368;
+        }
+
+        .sidebar ul{
+            list-style: none;
+        }
+
+        .sidebar ul a{
+            display: block;
+            height: 90;
+            width: 100%;
+            line-height: 65px;
+            font-size: 20px;
+            font-family: sans-serif;
+            color: white;
+            padding-left: 40px;
+            box-sizing: border-box;
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+            border-bottom: 1px solid black;
+           
+        }
+
+        .sidebar ul a i{
+            margin-right: 16px;
+        }
+
+        header{
+            background-color: #174368;
+            color: white;
+            padding-left: 35px;
+            height: 65px;
+            font-size: 45px;
+            font-family: sans-serif;
+        }
+
+        header button{
+            float: right;
+            height: 30px;
+            font-size: 16px;
+            margin-top: 16px;
+            margin-right: 16px;
+            border-radius: 8px;
+            align-items: center;
+            cursor: pointer;
+            color: white;
+            background-color: #4884b6;
+            width: 70px;
+            border-style: none;
+            box-shadow: rgba(255, 255, 255, 0.26) 0 1px 2px inset;
+            box-sizing: border-box;
+            font-family: sans-serif;
+            padding-top: 4px;
+            font-weight: normal;
+        }
+
+        .messages{
+            background-color: #174368;
+        }
+    </style>
 </head>
 <body>
+    <header>
+        justask.
+        <a href="/logout">
+            <button>Logout</button>
+        </a>  
+    </header>
+    <div class="sidebar">
+        <ul>
+            <li><a href="{{ url_for('profile') }}"><i class="fa-regular fa-user"></i>Profile</a></li>
+            <li><a href="{{ url_for('chat_login') }}"><i class="fa-solid fa-comments"></i>Chat</a></li>
+            <li><a href=""><i class="fa-solid fa-question"></i>MCQ</a></li>
+            <li><a href=""><i class="fa-regular fa-comment-dots"></i>Feedback</a></li>
+        </ul>
+    
+    </div>
     <a href="/chat_logout">
         <button>Logout</button>
     </a>  
@@ -19,17 +123,17 @@
 
                 <div id="messages"></div>
 
-<form id="message_input_form">
-    <input type="text" id="message_input" placeholder="Enter your message here">
-    <button type="submit">Send</button>
-</form>
-</div>
-</div>
-</div>
+        <form id="message_input_form">
+            <input type="text" id="message_input" placeholder="Enter your message here">
+            <button type="submit">Send</button>
+        </form>
+        </div>
+        </div>
+    </div>
 </body>
 <script src="https://cdn.socket.io/3.1.3/socket.io.min.js"></script>
 <script>
-    const socket = io.connect("https://panic-banned-international-offensive.trycloudflare.com");
+    const socket = io.connect("http://127.0.0.1:5000");
 
     socket.on('connect', function () {
         socket.emit('join_room', {
