--- a/chat-app/templates/chat_login.html
+++ b/chat-app/templates/chat_login.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>My Chat App</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
+    <title>Chat Forum</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/0260874841.js" crossorigin="anonymous"></script> <!--Used for icons -->
     <style>
+        *{
+            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+
         *,
         *:before,
         *:after{
@@ -18,7 +21,7 @@
         box-sizing: border-box;
         }
         body{
-            background-color: #080710;
+            background-color: #4884b6;
         }
         .background{
         width: 430px;
@@ -28,10 +31,70 @@
         left: 50%;
         top: 50%;
         }
+        .sidebar{
+            position:absolute;
+            float: left;
+            left: 0;
+            width: 200px;
+            height: calc(100% - 65px);
+            background-color: #174368;
+        }
+
+        .sidebar ul{
+            list-style: none;
+        }
+
+        .sidebar ul a{
+            display: block;
+            height: 90;
+            width: 100%;
+            line-height: 65px;
+            font-size: 20px;
+            font-family: sans-serif;
+            color: white;
+            padding-left: 40px;
+            box-sizing: border-box;
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+            border-bottom: 1px solid black;
+           
+        }
+
+        .sidebar ul a i{
+            margin-right: 16px;
+        }
+
+        header{
+            background-color: #174368;
+            color: white;
+            padding-left: 35px;
+            height: 65px;
+            font-size: 45px;
+            font-family: sans-serif;
+        }
+
+        header button{
+            float: right;
+            height: 30px;
+            font-size: 16px;
+            margin-top: 16px;
+            margin-right: 16px;
+            border-radius: 8px;
+            align-items: center;
+            cursor: pointer;
+            color: white;
+            background-color: #4884b6;
+            width: 70px;
+            border-style: none;
+            box-shadow: rgba(255, 255, 255, 0.26) 0 1px 2px inset;
+            box-sizing: border-box;
+            font-family: sans-serif;
+            padding-top: 4px;
+            font-weight: normal;
+        }
         form{
         height: 520px;
         width: 400px;
-        background-color: rgba(24, 28, 207, 0.13);
+        background-color: #174368;;
         position: absolute;
         transform: translate(-50%,-50%);
         top: 50%;
@@ -42,7 +105,6 @@
         padding: 50px 35px;
         }
         form *{
-        font-family: 'Poppins',sans-serif;
         color: #ffffff;
         letter-spacing: 0.5px;
         outline: none;
@@ -89,11 +151,25 @@
     </style>
 </head>
 <body>
+    <header>
+        justask.
+        <a href="/logout">
+            <button>Logout</button>
+        </a>  
+    </header>
+    <div class="sidebar">
+        <ul>
+            <li><a href="{{ url_for('profile') }}"><i class="fa-regular fa-user"></i>Profile</a></li>
+            <li><a href="{{ url_for('chat_login') }}"><i class="fa-solid fa-comments"></i>Chat</a></li>
+            <li><a href=""><i class="fa-solid fa-question"></i>MCQ</a></li>
+            <li><a href=""><i class="fa-regular fa-comment-dots"></i>Feedback</a></li>
+        </ul>
+    </div>
     <div class = "background">
         <form action="/chat_login" method = "post">
-            <h3>My Chat App</h3>
-            <label>Enter room id:</label>
-            <input type="text" placeholder="1234" onfocus="this.placeholder = ''"onblur="this.placeholder = 1234" name="room">
+            <h3>Chat Forum</h3>
+            <label>Enter room ID:</label>
+            <input type="text" placeholder="Room ID" onfocus="this.placeholder = ''"onblur="this.placeholder = 1234" name="room">
             
             <button type="submit">Submit</button>
         </form>
