changes to registration

--- a/chat-app/templates/login.html
+++ b/chat-app/templates/login.html
@@ -32,6 +32,7 @@
         text-align: center;
         color:  #0a2031;
         letter-spacing: 4px;
+        position: static;
         }
         form{
         height: 500px;
