--- a/chat-app/templates/register.html
+++ b/chat-app/templates/register.html
@@ -24,15 +24,15 @@
          }
         .logo{
         font-family: 'Geneva';
-        margin-top: 60px;
-        font-size: 35px;
-        line-height: 42px;
-        text-align: center;
+        margin: 5px 0px 0px 30px;
+        font-size: 45px;
+        text-align: left;
         color:  #0a2031;
         letter-spacing: 4px;
+        position:fixed;
         }
         form{
-        height: 800px;
+        height: 700px;
         width: 500px;
         box-shadow: 0 0 40px rgba(8,7,16,0.6);
         background-color: rgba(97, 99, 206, 0.13);
@@ -40,11 +40,12 @@
         border: 1px solid rgba(255,255,255,0.1);
         position: absolute;
         transform: translate(-50%,-50%);
-        top: 53%;
+        top: 50%;
         left: 50%;
         border-radius: 10px;
         padding: 50px 50px;
         background:  #174368;
+        margin: auto;
         }
         form *{
         font-family: 'Poppins',sans-serif;
@@ -54,8 +55,7 @@
         letter-spacing: 0.5px;
         }
         form h3{
-        margin-top: 2%;
-        font-size: 30px;
+        margin: auto;
         line-height: 30px;
         text-align: center;
         font-weight: 400;
@@ -67,13 +67,13 @@
         background-color: rgba(255,255,255,0.07);
         border-radius: 3px;
         padding: 0 10px;
-        margin-top: 7px;
+        margin-top: 4px;
         font-size: 14px;
         font-weight: 300;
         }
         label {
         display: block;
-        margin-top: 20px;
+        margin-top: 10px;
         font-size: 16px;
         font-weight: 500;
         position: relative;
