--- a/chat-app/templates/profile.html
+++ b/chat-app/templates/profile.html
@@ -15,6 +15,7 @@
             padding: 0;
             text-decoration: none;
             list-style: none;
+            position:static;
         }
 
         .sidebar{
