--- a/chat-app/templates/chat.html
+++ b/chat-app/templates/chat.html
@@ -92,8 +92,142 @@
             font-weight: normal;
         }
 
-        .messages{
+            /* The Modal (background) */
+            .modal {
+            display: none; /* Hidden by default */
+            position: fixed; /* Stay in place */
+            z-index: 1; /* Sit on top */
+            padding-top: 100px; /* Location of the box */
+            left: 0;
+            top: 0;
+            width: 100%; /* Full width */
+            height: 100%; /* Full height */
+            overflow: auto; /* Enable scroll if needed */
+            background-color: rgb(0,0,0); /* Fallback color */
+            background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+            }
+
+            /* Modal Content */
+            .modal-content {
             background-color: #174368;
+            margin: auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 800px;
+            border-radius: 8px;
+            max-width: 50%;
+            }
+
+            /* The Close Button */
+            .close {
+            color: #aaaaaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+            }
+            .close:hover,
+            .close:focus {
+            color: #000;
+            text-decoration: none;
+            cursor: pointer;
+            }
+
+            /* The modal internals*/
+            /* Add styles to the form container */
+            .form-container {
+            max-width: 99%;
+            padding: 10px;
+            align-items: center;
+            margin: 25px 0 18px 0;
+            background-color:  #4884b6;
+            border-radius: 8px;
+            margin-top:40px;
+            }
+
+            /* Full-width input fields */
+            .form-container input[type=text], .form-container textarea {
+            width: 90%;
+            padding: 15px;
+            margin: 16px 0 16px 20px;
+            border: none;
+            background: #95b3ce;
+            border-radius: 5px;
+            resize: none;
+            }
+
+            /* When the inputs get focus, do something */
+            .form-container input[type=text]:focus, .form-container textarea:focus {
+            background-color: #bdc9d3;
+            outline: none;
+            }
+
+            /* Set a style for the submit/login button */
+            .form-container .btn, .Mbutton {
+            background-color: #174368;
+            color: white;
+            padding: 16px 20px;
+            border: none;
+            cursor: pointer;
+            width: 20%;
+            margin-top:15px;
+            margin-bottom:20px;
+            margin-left: 20px;
+            opacity: 0.8;
+            border-radius: 8px;
+            }
+            .Mbutton{
+                position: fixed;
+                bottom: 30px;
+                right: 30px;
+                width: 150px;
+            }
+
+            /* Add some hover effects to buttons */
+            .form-container .btn:hover, .open-button:hover, .Mbutton{
+            opacity: 1;
+            }
+
+            ::placeholder{
+            color: #174368;
+            }
+            
+        .container{
+            height:80%;
+            color: white;
+            display: block;
+            position: absolute;
+            margin: 20px 20px 20px 20px;
+            width: 70%;
+            max-width: 70%;
+            min-width: 500px;
+            border-radius: 3mm;
+            float: left;
+            top: 20%;
+            left: 15%;
+            padding: 2%;
+            overflow-y: auto;
+            text-align: center;
+        }
+        h2 {
+            background-color: #174368;
+            color: white;
+            position: absolute;
+            width: 70%;
+            border-radius: 6mm;
+            top: 8%;
+            left: 15%;
+            float: left;
+            padding: 1%;
+        }
+        
+        .messages{
+            border-color:#4884b6;
+            border-radius: 4px;
+            background-color: #174368;
+            width: 80%;
+            text-align: center;
+            align-items: center;
+            margin-bottom: 70px;
         }
     </style>
 </head>
@@ -111,25 +245,38 @@
             <li><a href=""><i class="fa-solid fa-question"></i>MCQ</a></li>
             <li><a href=""><i class="fa-regular fa-comment-dots"></i>Feedback</a></li>
         </ul>
-    
     </div>
-    <a href="/chat_logout">
-        <button>Logout</button>
-    </a>  
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-6 col-md-offset-3 well">
-                <h1 class="room-title text-center">Welcome to chat room {{ room }}</h1>
 
-                <div id="messages"></div>
+        <!-- Trigger/Open The Modal -->
+        <button class="Mbutton" id="myBtn">Ask Question</button>
+        <!-- The Modal -->
+        <div id="myModal" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <form action="/action_page.php" class="form-container">    
+                <input type="text" placeholder="Enter your question" name="question" required></input>
+            
+                <textarea placeholder="Add a description" class="form-control" id="exampleFormControlTextarea3" rows="8 "maxlength="5000" ></textarea>
+            
+                <button type="submit" class="btn">Post</button>
 
+                <!-- <a href=""><i class="fa-solid fa-pen"></i>whiteboard</a> -->
+                
+            </form>
+        </div>
+        </div>
+
+        <h2 class="room-title text-center">Welcome to chat room {{ room }}</h2>
+
+        <div class="container"> 
+        <div class="messages" id="messages"></div>
         <form id="message_input_form">
             <input type="text" id="message_input" placeholder="Enter your message here">
             <button type="submit">Send</button>
         </form>
         </div>
-        </div>
-    </div>
+        
 </body>
 <script src="https://cdn.socket.io/3.1.3/socket.io.min.js"></script>
 <script>
@@ -168,7 +315,8 @@
     socket.on('receive_message', function (data) {
         console.log(data);
         const newNode = document.createElement('div');
-        newNode.innerHTML = `<b>${data.time} ${data.username}:&nbsp;</b> ${data.message} `;
+        newNode.className = 'card'
+        newNode.innerHTML = `${data.time} ${data.username}: ${data.message} `;
         document.getElementById('messages').appendChild(newNode);
     });
 
@@ -187,5 +335,38 @@
         newNode.innerHTML = `<b>${data.username}</b> has left the room`;
         document.getElementById('messages').appendChild(newNode);
     });
+    
+        // Get the modal
+    var modal = document.getElementById("myModal");
+
+    // Get the button that opens the modal
+    var btn = document.getElementById("myBtn");
+
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
+
+    // When the user clicks the button, open the modal 
+    btn.onclick = function() {
+    modal.style.display = "block";
+    }
+
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function() {
+    modal.style.display = "none";
+    }
+
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function(event) {
+    if (event.target == modal) {
+        modal.style.display = "none";
+    }
+    }
+    function openForm() {
+    document.getElementById("myForm").style.display = "block";
+    }
+
+    function closeForm() {
+    document.getElementById("myForm").style.display = "none";
+    }
 </script>
 </html>
