--- a/chat-app/templates/testing.html
+++ b/chat-app/templates/testing.html
@@ -10,7 +10,6 @@
 
 }
 
-
 /* The Modal (background) */
 .modal {
   display: none; /* Hidden by default */
@@ -81,7 +80,7 @@
 }
 
 /* Set a style for the submit/login button */
-.form-container .btn {
+.form-container .btn, .Mbutton {
   background-color: #174368;
   color: white;
   padding: 16px 20px;
@@ -96,7 +95,7 @@
 }
 
 /* Add some hover effects to buttons */
-.form-container .btn:hover, .open-button:hover {
+.form-container .btn:hover, .open-button:hover, .Mbutton{
   opacity: 1;
 }
 
@@ -116,7 +115,7 @@
 <h2>Adding a question</h2>
 
 <!-- Trigger/Open The Modal -->
-<button id="myBtn">Ask Question</button>
+<button class="Mbutton" id="myBtn">Ask Question</button>
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
