--- a/canvastrial/templates/session.html
+++ b/canvastrial/templates/session.html
@@ -22,23 +22,23 @@
     <script src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='client.js') }}"></script>
     <div class="toolkit">
-      <div class = "tool" style="width:10px;height:10px;background:green;" id="green" onclick="color(this)">
+      <div class = "tool" id="green" onclick="color(this)">
         <img src="/static/Green Pen.png">
       
       </div>
-      <div class = "tool" style="width:10px;height:10px;background:blue;" id="blue" onclick="color(this)">
+      <div class = "tool"  id="blue" onclick="color(this)">
         <img src="/static/Blue Pen.png">
       </div>
-      <div class = "tool" style="width:10px;height:10px;background:red;" id="red" onclick="color(this)">
+      <div class = "tool"  id="red" onclick="color(this)">
         <img src="/static/Red Pen.png">
       </div>
-      <div class = "tool" style="width:10px;height:10px;background:yellow;" id="yellow" onclick="color(this)">
+      <div class = "tool" id="yellow" onclick="color(this)">
         <img src="/static/Yellow Pen.png">
       </div>
-      <div class = "tool" style="width:10px;height:10px;background:orange;" id="orange" onclick="color(this)">
+      <div class = "tool"  id="orange" onclick="color(this)">
         <img src="/static/Orange Pen.png">
       </div>
-      <div class = "tool" style="width:10px;height:10px;background:black;" id="black" onclick="color(this)">
+      <div class = "tool"  id="black" onclick="color(this)">
         <img src="/static/Black Pen.png">
       </div>
       <div class = "tool" style="width:15px;height:15px;background:white;border:2px solid;" id="white" onclick="color(this)"></div>
