--- a/canvastrial/templates/session.html
+++ b/canvastrial/templates/session.html
@@ -2,26 +2,29 @@
   <html lang="en">
   <head>
     <title>Flask_Chat_App</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
     <script src="{{ url_for('static', filename='canvas.js') }}"></script>
     <link rel="stylesheet" href="./static/css/main.css">
   </head>
   <body onload="init()">
 
-    <h3 style='color: #ccc;font-size: 30px;'>No message yet..</h3>
-    <div class="message_holder"></div>
 
     <form action="" method="POST">
-      <input type="text" class="username" placeholder="User Name"/>
-      <input type="text" class="message" placeholder="Messages"/>
-      <input type="submit"/>
+      <!-- <input type="text" class="username" placeholder="User Name"/>
+      <input type="text" class="message" placeholder="Messages"/> -->
+      <!-- <input type="submit"/> -->
     </form>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
     <script src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='client.js') }}"></script>
-    <div class="toolkit">
+ 
+
+
+    <!-- <div class="toolkit">
       <div class = "tool" id="green" onclick="color(this)">
         <img src="/static/Green Pen.png">
       
@@ -43,17 +46,15 @@
       </div>
       <div class = "tool" style="width:15px;height:15px;background:white;border:2px solid;" id="white" onclick="color(this)"></div>
       <input type="checkbox" id="updatecanvas">
-    </div>
+    </div> -->
 
     <!-- <canvas id="grid"style="position: absolute; left: 0; top: 500; z-index: 0;"></canvas> -->
     <canvas id="can" style="position: absolute; left: 0; top: 500; z-index: 1;"></canvas>
+    <div id="toolkit">
 
+    </div>
 
 
 
 </body>
 </html>
-
-
-
-
