--- a/canvastrial/static/css/main.css
+++ b/canvastrial/static/css/main.css
@@ -7,6 +7,17 @@
   z-index:0;
 }
 
+#colorPicker
+{
+  -webkit-appearance: square-button;
+  width: 44px;
+  height: 23px;
+  cursor:crosshair;
+  padding: 1px 2px;
+  outline:none;
+  border-radius: 20px;
+
+}
 #toolkit
 {
 
