--- a/canvastrial/templates/session.html
+++ b/canvastrial/templates/session.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
   <html lang="en">
   <head>
-    <title>Flask_Chat_App</title>
+    <title>Canvas Testing</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
     <script src="{{ url_for('static', filename='canvas.js') }}"></script>
     <link rel="stylesheet" href="./static/css/main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='client.js') }}"></script>
+ 
   </head>
   <body onload="init()">
-
-
     <form action="" method="POST">
       <!-- <input type="text" class="username" placeholder="User Name"/>
       <input type="text" class="message" placeholder="Messages"/> -->
@@ -17,11 +19,7 @@
     </form>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    
 
-    <script src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='client.js') }}"></script>
- 
 
 
     <!-- <div class="toolkit">
@@ -51,7 +49,9 @@
     <!-- <canvas id="grid"style="position: absolute; left: 0; top: 500; z-index: 0;"></canvas> -->
     <canvas id="can" style="position: absolute; left: 0; top: 500; z-index: 1;"></canvas>
     <div id="toolkit">
-
+        <input type="color" id="colorPicker">
+        <input type="range">
+        
     </div>
 
 
