--- a/canvastrial/static/css/main.css
+++ b/canvastrial/static/css/main.css
@@ -1,10 +1,34 @@
 .body
 {
     color: blueviolet;
+    
+    
+}
+#circle{
+  position:absolute;
+  transform:translate(-50%,-50%);
+  height:35px;
+  width:35px;
+  border-radius:50%;
+  border:2px solid black;
+  z-index:1;
+  cursor:none;
+
+}
+#cursorcanvas
+{
+  position:absolute;
+  top:0;
+  left:0;
+  z-index: 1
 }
 #can
 {
+  position:absolute;
+  top:0;
+  left:0;
   z-index:0;
+  cursor:none;
 }
 
 #colorPicker
@@ -33,7 +57,7 @@
   height:60px;
   background-color: red;
   left:50%;
-  z-index: 1;
+  z-index: 2;
   transform: rotate(360deg);
   -webkit-transform: translate3d(-50%, -50%, 0); 
   -moz-transform: translate3d(-50%, -50%, 0);  
