--- a/canvastrial/templates/session.html
+++ b/canvastrial/templates/session.html
@@ -40,21 +40,27 @@
         <img src="/static/Orange Pen.png">
       </div>
       <div class = "tool"  id="black" onclick="color(this)">
-        <img src="/static/Black Pen.png">
+        
       </div>
       <div class = "tool" style="width:15px;height:15px;background:white;border:2px solid;" id="white" onclick="color(this)"></div>
       <input type="checkbox" id="updatecanvas">
     </div> -->
     <!-- <canvas id="grid"style="position: absolute; left: 0; top: 500; z-index: 0;"></canvas> -->
-    <canvas id="can" style="position: absolute; left: 0; top: 500; z-index: 1;"></canvas>
     <div id="toolkit">
-        <input type="color" id="colorPicker">
-        <label id="strokePx" ></label>
-        <input type="range" id="strokeSlider" min = "1" max = "100" oninput="PrintSlider">
-        
+      <input type="color" id="colorPicker">
+      <label id="strokePx" ></label>
+      <input type="range" id="slide" min = "1" max = "100" value="3">
+      <p id="val"></p>
+    <canvas id="cursorcanvas"></canvas>
+    <canvas id="can"></canvas>
+   
+
+        <script>
+
+        </script>
     </div>
-
-
+    
+ 
 
 </body>
 </html>
