--- a/chatapprefactor/static/css/styles.css
+++ b/chatapprefactor/static/css/styles.css
@@ -1,52 +1,50 @@
 
 body{
-    background-color: #4884b6;
-}
-*{
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    list-style: none;
-    position:static;
+    background-color: hsl(207, 43%, 50%);
 }
 
-.sidebar{
+#sidebarBG{
+    background-color: rgba(63,64,65,0.4);
+    width:70px;
+    height:100%;
+    left:0;
+    position: absolute;
+}
+
+#sidebar{
     position:absolute;
     float: left;
     left: 0;
-    width: 200px;
+    width: 65px;
     height: calc(100% - 65px);
     background-color: #174368;
+    opacity:100%;
 }
 
-.sidebar ul{
+ul{
     list-style: none;
+    padding-left: 0;
 }
-
-.sidebar ul a{
+ul li{
+    overflow:auto;
+    padding-left:0;
+    padding-bottom: 10px;
     display: block;
-    height: 90;
-    width: 100%;
-    line-height: 65px;
-    font-size: 20px;
-    color: white;
-    padding-left: 40px;
-    box-sizing: border-box;
-    border-top: 1px solid rgba(255, 255, 255, 0.1);
-    border-bottom: 1px solid black;
-    
+}
+.navbutton.icon{
+    transform: translate3d(-50%, -50%, 0); 
+    position:absolute;
+    left:40%;
 }
 
-.sidebar ul a i{
-    margin-right: 16px;
-}
+
 
 header{
     background-color: #174368;
     color: white;
     padding-left: 35px;
     height: 65px;
-    font-size: 45px;
+    font-size: 25px;
 }
 
 header button{
@@ -66,81 +64,4 @@ header button{
     box-sizing: border-box;
 }
 
-.content{
-    float: left;
-    background-color: #174368;
-    height: 100%;
-    left: 30px;
-    top: 30px;
-    position:relative;
-    border-radius: 25px;
-    padding: 10px;
-    width: 75%;
-}
 
-.card{
-    padding-left: 20px;
-    padding-bottom: 28px;
-    overflow: hidden;
-}
-
-.card h1{
-    color: white;
-    font-size: 35px;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.box{
-    float: left;
-    background-color: #95b3ce;
-    border-radius: 25px;
-    padding: 20px;
-    width: 45%;
-    height: 120px;   
-}
-
-.profile-icon{
-    float: left;
-    padding-right: 16px;
-}
-
-.username-primary, .email-primary{
-    display: flex;
-    justify-content: left;
-}
-
-.box-right{
-    background-color: #95b3ce;
-    border-radius: 25px;
-    padding: 20px;
-    width: 45%;
-    height: 120px;
-    margin-left: 50%;
-}
-
-.content-qs{
-    float: left;
-    background-color: #174368;
-    height: 80px;
-    left: 30px;
-    top: 80px;
-    position:relative;
-    border-radius: 25px;
-    padding: 10px;
-    width: 75%;
-}
-
-.content-qs h1{
-    color: white;
-    text-align: center;
-    font-size: 24px;
-}
-
-.container{
-    float: left;
-    margin-left: 190px;
-    margin-top: 0px;
-    width: calc(100% - 230px);
-    height: calc(100% - 65px);
-}
-        
