--- a/jas-testing-2/chat-app/templates/hubbase.html
+++ b/jas-testing-2/chat-app/templates/hubbase.html
@@ -45,7 +45,7 @@
                     <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Sessions</a>
                     <ul class="collapse list-unstyled" id="homeSubmenu">
                         <li>
-                            <a href="#">New Session</a>
+                            <a href="">New Session</a>
                         </li>
                         <li>
                             <a href="{{ url_for('chat_login') }}">Join Session</a>
