--- a/chat-app backup/templates/MCQ.html
+++ b/chat-app backup/templates/MCQ.html
@@ -181,7 +181,7 @@ body {
     </div>
 
      <!-- Trigger/Open The Modal -->
-     <button class="Mbutton" id="myBtn">Ask Question</button>
+     <button class="Mbutton" id="myBtn">Create a Question</button>
      <!-- The Modal -->
      <div id="myModal" class="modal">
      <!-- Modal content -->
